--- a/index.html
+++ b/index.html
@@ -8,11 +8,10 @@
 	<head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>Cube &mdash; Free Website Template, Free HTML5 Template by FreeHTML5.co</title>
+	<title>Abhay Bhendekar</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<meta name="description" content="Free HTML5 Website Template by FreeHTML5.co" />
+	<meta name="description" content="abhaybhendekar" />
 	<meta name="keywords" content="free website templates, free html5, free template, free bootstrap, free website template, html5, css3, mobile first, responsive" />
-	<meta name="author" content="FreeHTML5.co" />
 
   	<!-- Facebook and Twitter integration -->
 	<meta property="og:title" content=""/>
@@ -65,7 +64,7 @@
 				
 				<div class="row">
 					<div class="col-sm-2 col-xs-12">
-						<div id="gtco-logo"><a href="index.html"><img src="images/logo.png" alt="Free HTML5 Website Template by FreeHTML5.co"></a></div>
+						<div id="gtco-logo"><a href="index.html"><img src="images/logo.png" alt="#"></a></div>
 					</div>
 					<div class="col-xs-10 text-right menu-1">
 						<ul>
@@ -109,9 +108,9 @@
 										<img src="images/cube.png" alt="Free HTML5 Website Template by FreeHTML5.co">
 									</div>
 									<div class="col-md-7 copy animate-box">
-										<h1>Make your life simpler, try this for free.</h1>
-										<p>A free template hand-crafted by FreeHTML5.co. Visit our site for more awesome templates.</p>
-										<p><a href="http://freehtml5.co" target="_blank" class="btn btn-white">Visit FreeHTML5.co</a></p>
+										<h1>Abhay Bhendekar the lawyer</h1>
+										<p>This is lawyer Abhay Bhendekar's blog</p>
+										<p><a href="#" target="_blank" class="btn btn-white">Abhay Bhendekar is in room</a></p>
 									</div>
 								</div>
 							</div>
@@ -334,37 +333,7 @@
 									<li><a href="#">Contact</a></li>
 								</ul>
 							</div>
-							<div class="col-md-6">
-								<p>
-									<a href="tel://1234567890">+1 234 4565 2342</a> <br>
-									<a href="#">info@domain.com</a>
-								</p>
-							</div>
-						</div>
-					</div>
-					<div class="col-md-4 gtco-footer-subscribe">
-						<form class="form-inline">
-						  <div class="form-group">
-						    <label class="sr-only" for="exampleInputEmail3">Email address</label>
-						    <input type="email" class="form-control" id="" placeholder="Email">
-						  </div>
-						  <button type="submit" class="btn btn-primary">Send</button>
-						</form>
-					</div>
-				</div>
-			</div>
-			<div class="gtco-copyright">
-				<div class="gtco-container">
-					<div class="row">
-						<div class="col-md-6 text-left">
-							<p><small>&copy; 2016 Free HTML5. All Rights Reserved. </small></p>
-						</div>
-						<div class="col-md-6 text-right">
-							<p><small>Designed by <a href="http://freehtml5.co/" target="_blank">FreeHTML5.co</a> Demo Images: <a href="http://pixeden.com/" target="_blank">Pixeden</a> &amp; <a href="http://unsplash.com" target="_blank">Unsplash</a></small> </p>
-						</div>
-					</div>
-				</div>
-			</div>
+				
 		</footer>
 
 	</div>
